[package]
name = "frenetic"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/enarx/frenetic"
repository = "https://github.com/enarx/frenetic"
description = "Tools for CPU context switching"
readme = "README.md"
exclude = [ ".gitignore", ".github/*" ]

categories = ["no-std"]
keywords = ["no_std"]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/frenetic", workflow = "test" }
#github = { repository = "enarx/frenetic", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/frenetic" }
is-it-maintained-open-issues = { repository = "enarx/frenetic" }
